--- a/docs/tutorials/plugin/index.mdx
+++ b/docs/tutorials/plugin/index.mdx
@@ -2,3 +2,10 @@
 sidebar_position: 2
 title: "🛠️ Tools & Functions"
 ---
+
+# WIP 🚧
+
+This section is currently under development. Stay tuned for updates! 🚀
+
+
+<img src="/img/oi/cat.png" alt="Under Construction" width="100%" height="100%" />
