--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -37,17 +37,17 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 ## Information Retrieval (RAG) 📚
 
-Open WebUI currently provides an interface that enables the use of existing information retrieval (IR) models efficiency. However, we believe there is vast potential for improvement. Led by our project founder, Tim, we plan on dedicating additional resources to enhance this crucial aspect of our webui.
+Open WebUI currently provides an interface that enables the use of existing information retrieval (IR) models efficiency. However, we believe there is vast potential for improvement. We fully recognize the limitations of our current RAG (Retrieval-Augmented Generation) implementation in our WebUI, understanding that a one-size-fits-all approach does not effectively meet all users' needs. 
+
+To address this, we are committed to transforming our framework to be highly modular and extensively configurable. This new direction will enable users to tailor the information retrieval process to their specific requirements with ease, using a straightforward, interactive interface that allows for simple drag-and-drop customization. This refinement aims to significantly enhance user experience by providing a more adaptable and personalized IR setup.
 
 Here's our focused plan for advancing our information retrieval capabilities:
 
-- 🔄 **Advanced Integration with Existing IR Models**: While our current framework supports standard IR models, our goal is to optimize these integrations to offer even faster and more accurate retrieval results.
-
-- 🚀 **Information Retrieval Enhancements**: Tim is committed to pushing the boundaries of current technology. We're exploring cutting-edge advancements in IR to provide deeper, more meaningful search results tailored to individual user needs.
-
 - 🌐 **Customizable RAG Framework**: Envision a future where you can effortlessly tailor your IR setup via a user-friendly interface. This will include modular components that users can drag, drop, and configure without needing deep technical knowledge.
 
-- 🔍 **Research and Development in IR Technologies**: We're not just adapting existing technologies; we're also actively participating in the creation of next-generation retrieval systems. This involves both in-house development and collaborations with leading research institutions.
+- 🔄 **Advanced Integration with SoTA Methods**: We aim to incorporate the latest developments in retrieval methods, enhancing accuracy and efficiency with advanced techniques and architectures.
+
+- 🔍 **Dedicated R&D**: We’re scaling up our research and development to discover and integrate novel retrieval methods that push the boundaries of current methods, in collaboration with leading research entities.
 
 ## Community 🤝
 
