--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -35,6 +35,8 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 - 📈 **Analytics Dashboard**: A robust analytics platform will allow users to gain insights into their application performance and user activities, empowering them with data to make informed decisions and improve user experiences.
 
+- 📦 **Packaged Single Binary Executable**: Simplifying deployment and ensuring compatibility across different platforms, we aim to offer our interface as a single binary executable. This approach will facilitate effortless installation and updates, significantly enhancing usability for all users, especially those with limited technical expertise.
+
 ## Information Retrieval (RAG) 📚
 
 Open WebUI currently provides an interface that enables the use of existing information retrieval (IR) models efficiency. However, we believe there is vast potential for improvement. We fully recognize the limitations of our current RAG (Retrieval-Augmented Generation) implementation in our WebUI, understanding that a one-size-fits-all approach does not effectively meet all users' needs. 
